sdl-parser/src/snapshots/sdl_parser__node__tests__can_parse_shorthand_node_roles.snap
---
source: sdl-parser/src/node.rs
expression: scenario
---
name: test-scenario
description: some-description
nodes:
  win-10:
    type: VM
    description: ~
    resources:
      ram: 34359738368
      cpu: 2
    source:
      name: windows10
      version: "*"
    features: ~
    conditions: ~
    vulnerabilities: ~
    roles:
      admin:
        username: admin
        entities: ~
features: ~
infrastructure: ~
conditions: ~
vulnerabilities: ~
capabilities: ~
metrics: ~
evaluations: ~
tlos: ~
entities: ~
goals: ~
injects: ~
events: ~
scripts: ~
stories: ~

