sdl-parser/src/snapshots/sdl_parser__node__tests__fields_are_case_insensitive.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: Network,
    dependencies: Some(
        [
            "1",
            "kolm",
            "serde",
        ],
    ),
    description: Some(
        "a network",
    ),
    address: Some(
        Address {
            type_field: "ipv4",
            cidr: "10.10.10.0/24",
        },
    ),
    policy: Some(
        Policy {
            type_field: "network",
            rule: Rule {
                direction: Ingress,
                description: "a-description",
                allowed_address: Some(
                    [
                        "some-ip",
                        "some-address",
                        "some-number-5",
                    ],
                ),
                port: 8080,
            },
        },
    ),
    flavor: Some(
        Flavor {
            ram: 4000000000,
            cpu: 4,
        },
    ),
    source: Some(
        Source {
            template: Some(
                "windows10-template",
            ),
            package: Some(
                Package {
                    name: "basic-windows10",
                    version: "*",
                },
            ),
        },
    ),
}
