sdl-parser/src/snapshots/sdl_parser__node__tests__includes_node_requirements_with_network_type.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: Network,
    dependencies: Some(
        [
            "1",
            "kolm",
            "serde",
        ],
    ),
    description: Some(
        "a network",
    ),
    address: Some(
        Address {
            type_field: "ipv4",
            cidr: "10.10.10.0/24",
        },
    ),
    policy: Some(
        Policy {
            type_field: "network",
            rule: Rule {
                direction: Ingress,
                description: "a-description",
                allowed_address: Some(
                    [
                        "a-list-of-address",
                        "kolm",
                        "5",
                    ],
                ),
                port: "8080",
            },
        },
    ),
    template: None,
    flavor: None,
    source: None,
}
