sdl-parser/src/snapshots/sdl_parser__node__tests__includes_node_requirements_with_source_template.snap
---
source: sdl-parser/src/node.rs
expression: nodes
---
{
    "win-10": Node {
        type_field: VM,
        description: None,
        resources: Some(
            Resources {
                ram: 2147483648,
                cpu: 2,
            },
        ),
        _source_helper: None,
        source: Some(
            Source {
                name: "windows10",
                version: "*",
            },
        ),
    },
}
