sdl-parser/src/snapshots/sdl_parser__node__tests__includes_node_requirements_with_source_template_and_conditions.snap
---
source: sdl-parser/src/node.rs
expression: nodes
---
{
    "win-10": Node {
        type_field: VM,
        description: None,
        resources: Some(
            Resources {
                ram: 2147483648,
                cpu: 2,
            },
        ),
        source_helper: Some(
            ShortSource(
                "windows10",
            ),
        ),
        source: Some(
            Source {
                name: "windows10",
                version: "*",
            },
        ),
        conditions: Some(
            [
                "condition-1",
                "condition-2",
            ],
        ),
    },
}
