sdl-parser/src/snapshots/sdl_parser__node__tests__includes_node_requirements_with_switch_type.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: Switch,
    description: Some(
        "a network switch",
    ),
    resources: None,
    _source_helper: None,
    source: None,
}
