sdl-parser/src/snapshots/sdl_parser__node__tests__includes_node_with_feature_and_role.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM,
    description: None,
    resources: None,
    source_helper: None,
    source: None,
    features: Some(
        {
            "feature-1": "admin",
        },
    ),
    conditions: None,
    vulnerabilities: None,
    roles: Some(
        {
            "admin": "username",
        },
    ),
}
