sdl-parser/src/snapshots/sdl_parser__node__tests__includes_node_with_features.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM,
    description: None,
    resources: None,
    source_helper: None,
    source: None,
    features: Some(
        [
            "feature-1",
            "feature-2",
        ],
    ),
    conditions: None,
    vulnerabilities: None,
    roles: None,
}
