sdl-parser/src/snapshots/sdl_parser__node__tests__node_conditions_are_parsed.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM,
    description: None,
    resources: None,
    source_helper: None,
    source: None,
    features: None,
    conditions: Some(
        [
            "condition-1",
            "condition-2",
        ],
    ),
    vulnerabilities: None,
    roles: None,
}
